updated add Nav & Header

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="little lemon web site restaurant for delivery food online and reserve a table in advance"
     />
+    <meta name="author" content="littleLemon@gmail.com">
     <meta name="og:title" content="Little Lemon restaurant"/>
     <meta name="og:description" content="order food online , reserve a table in advance"/>
     <meta name="og:image" content="./bruchetta.jpg"/>
