--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="littleLemon@gmail.com">
     <meta name="og:title" content="Little Lemon restaurant"/>
     <meta name="og:description" content="order food online , reserve a table in advance"/>
-    <meta name="og:image" content="./bruchetta.jpg"/>
+    <meta name="og:image" content="../src/components/Main/images/bruchetta-min.jpg"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
